--- a/ScenekitStarter/LightingModelWindow.xib
+++ b/ScenekitStarter/LightingModelWindow.xib
@@ -67,6 +67,7 @@
                                         <menuItem title="Gooch" id="qPy-6U-M8Z"/>
                                         <menuItem title="Hemisphere" id="33t-1X-xrB" userLabel="Hemishphere"/>
                                         <menuItem title="Lamb Skin" id="1xW-tJ-aNb" userLabel="Lamb Skin"/>
+                                        <menuItem title="Thin Film" id="cNB-ro-3gy" userLabel="Lamb Skin"/>
                                         <menuItem title="Velvet" id="gsc-xb-G84" userLabel="Velvet"/>
                                     </items>
                                 </menu>
