--- a/ScenekitStarter/BlinnParameterView.xib
+++ b/ScenekitStarter/BlinnParameterView.xib
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6205" systemVersion="14A329f" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="101000" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6205"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="CWHBlinnParameterViewController">
             <connections>
+                <outlet property="ambientColorWell" destination="dyY-XW-zVm" id="gKL-0O-wDW"/>
+                <outlet property="lightColorWell" destination="IQ0-G5-TH4" id="fIC-KZ-Ee1"/>
                 <outlet property="view" destination="jsr-j5-tcm" id="N9P-pv-w8B"/>
             </connections>
         </customObject>
