--- a/ScenekitStarter/GoochParameterView.xib
+++ b/ScenekitStarter/GoochParameterView.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6205" systemVersion="14A329f" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="101000" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6205"/>
     </dependencies>
     <objects>
@@ -11,7 +12,9 @@
                 <outlet property="diffuseCoolTextField" destination="TBc-rU-24R" id="ewg-kB-oYl"/>
                 <outlet property="diffuseWarmSlider" destination="PcY-T4-Pon" id="hzn-un-9GJ"/>
                 <outlet property="diffuseWarmTextField" destination="rez-VG-Jfm" id="aP3-At-cLX"/>
+                <outlet property="surfaceColorWell" destination="spr-ir-eT0" id="IR6-3k-jCV"/>
                 <outlet property="view" destination="fT7-ub-8x1" id="ujh-RN-GVH"/>
+                <outlet property="warmColorWell" destination="Nzm-xg-Hjn" id="eji-O9-IQ5"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
