--- a/ScenekitStarter/HemisphereParameterView.xib
+++ b/ScenekitStarter/HemisphereParameterView.xib
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6205" systemVersion="14A329f" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="101000" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6205"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="CWHHemisphereParameterViewController">
             <connections>
+                <outlet property="groundColorWell" destination="vKh-T7-73k" id="Ajj-4l-H9X"/>
+                <outlet property="skyColorWell" destination="91g-XT-tAt" id="bSD-aC-Shb"/>
                 <outlet property="view" destination="q72-we-kkP" id="hSe-oZ-Lr9"/>
             </connections>
         </customObject>
