--- a/ScenekitStarter/LightingModelWindow.xib
+++ b/ScenekitStarter/LightingModelWindow.xib
@@ -55,7 +55,7 @@
                         <popUpButton key="view" verticalHuggingPriority="750" id="HuQ-mo-ozh">
                             <rect key="frame" x="0.0" y="14" width="149" height="43"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <popUpButtonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="UrR-4G-zVx">
+                            <popUpButtonCell key="cell" type="roundTextured" title="Phong Point Light" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" selectedItem="dF8-Ai-y7P" id="UrR-4G-zVx">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="menu"/>
                                 <menu key="menu" id="UlQ-XP-3CW">
@@ -64,10 +64,11 @@
                                         <menuItem title="Blinn" id="iCM-jc-oNK"/>
                                         <menuItem title="Edge Fuzz" id="uez-MC-ZVr"/>
                                         <menuItem title="EnvMap" id="qPl-qS-TdE"/>
+                                        <menuItem title="Glossy Wet Highlight" id="Tgq-VX-wKd"/>
                                         <menuItem title="Gooch" id="qPy-6U-M8Z"/>
                                         <menuItem title="Hemisphere" id="33t-1X-xrB" userLabel="Hemishphere"/>
                                         <menuItem title="Lamb Skin" id="1xW-tJ-aNb" userLabel="Lamb Skin"/>
-                                        <menuItem title="Thin Film" id="cNB-ro-3gy" userLabel="Lamb Skin"/>
+                                        <menuItem title="Thin Film" id="cNB-ro-3gy"/>
                                         <menuItem title="Velvet" id="gsc-xb-G84" userLabel="Velvet"/>
                                     </items>
                                 </menu>
